# OBS-background-filter

./: .clang-format  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODELS.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  example-config.json
.github/: SECURITY.md
data/locale/: en-US.ini
docs/: ARCHITECTURE.md  BUILD_CACHOS_DETAILED.md  SECURITY_IMPLEMENTATION.md
scripts/: build.bat  build.sh  verify-model.sh
src/: background-filter.cpp  background-filter.h  model-inference.cpp  model-inference.h  plugin-main.cpp  security-utils.cpp  security-utils.h
